--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -187,5 +187,6 @@
     <string name="btn_fill_up_select">Next</string>
     <string name="tv_fill_up_select_vehicle">Vehicle Model</string>
     <string name="tv_fill_UP_display_model">Vehicle Model</string>
+    <string name="Earning_input_empty">Enter Daily Earning</string>
 
 </resources>
